<resources>
    <string name="app_name">My Application</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sevan">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="dial">dial</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nyc_photograper">nyc_photograper</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="click_view_to_custom_alert_dialog">click view to custom alert dialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="insert_into_database">Insert Into Database</string>
    <string name="insert">insert</string>


</resources>